crates/oxc_react_compiler/tests/snapshots/async-captured-factory-cycle.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-captured-factory-cycle.js
---
function Component() {
	const make = function make(fn) {
		return wrap(fn);
	};
	function wrap(fn_0) {
		return make(fn_0);
	}
	wrap(_temp);
	return null;
}
async function _temp() {
	return null;
}
