crates/oxc_react_compiler/tests/snapshots/async-captured-factory-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-captured-factory-overwrite.js
---
function Component() {
	let count = 0;
	const mutate = () => count++;
	let make = _temp;
	const wrap = (fn_0) => make(fn_0);
	make = _temp3;
	wrap(async () => {
		await 0;
		mutate();
	})();
	return null;
}
function _temp3(fn_1) {
	return _temp2;
}
async function _temp2() {
	return null;
}
function _temp(fn) {
	return fn;
}
