crates/oxc_react_compiler/tests/snapshots/async-captured-factory-safe-selection.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-captured-factory-safe-selection.js
---
function Component() {
	let count = 0;
	const mutate = () => count++;
	const make = function make(safe, bad) {
		return safe;
	};
	const wrap = function wrap(safe_0, bad_0) {
		return make(safe_0, bad_0);
	};
	wrap(_temp, async () => {
		await 0;
		mutate();
	})();
	return null;
}
async function _temp() {
	return null;
}
