crates/oxc_react_compiler/tests/snapshots/async-computed-constant-safe-member.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-computed-constant-safe-member.js
---
function Component(t0) {
	let count = 0;
	const cb = () => count++;
	const obj = {
		run: async () => {
			await 0;
			cb();
		},
		safe() {}
	};
	obj["safe"]();
	return null;
}
