crates/oxc_react_compiler/tests/snapshots/async-constructor-returned-closure-not-invoked.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-constructor-returned-closure-not-invoked.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const Factory = function Factory() {
		return async () => {
			await 0;
			cb();
		};
	};
	new Factory();
	return null;
}
