crates/oxc_react_compiler/tests/snapshots/async-deferred-member-safe-before-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-deferred-member-safe-before-call.js
---
function Component(t0) {
	let count = 0;
	const opts = { cb: () => count++ };
	opts.cb = _temp;
	const run = async () => {
		await 0;
		opts.cb();
	};
	run();
	return null;
}
function _temp() {
	return null;
}
