crates/oxc_react_compiler/tests/snapshots/async-deferred-member-safe-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-deferred-member-safe-overwrite.js
---
function Component(t0) {
	let count = 0;
	const opts = { cb: () => count++ };
	const run = async () => {
		await 0;
		opts.cb();
	};
	run();
	opts.cb = _temp;
	return null;
}
function _temp() {
	return null;
}
