crates/oxc_react_compiler/tests/snapshots/async-destructured-parameter-safe-snapshot.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-destructured-parameter-safe-snapshot.js
---
function Component() {
	let count = 0;
	const arg = { cb: _temp };
	const run = _temp2;
	run(arg);
	arg.cb = () => count++;
	return null;
}
async function _temp2(t0) {
	const { cb } = t0;
	await 0;
	cb();
}
function _temp() {
	return null;
}
